--- a/src/plugins/webstuff/css/Web_Basic-Blue.css
+++ b/src/plugins/webstuff/css/Web_Basic-Blue.css
@@ -1097,6 +1097,15 @@ div#families table.infolist tbody tr td.ColumnValue ol li {
 div#families table.infolist tbody tr td.ColumnValue ol li a {
     text-decoration: underline;
 }
+div#families table.fixed_subtables table.eventlist {
+    table-layout:fixed;
+}
+div#families table.fixed_subtables table.eventlist th:first-child {
+    width:9em;
+}
+div#families table.fixed_subtables table.eventlist th:last-child {
+    width:5em;
+}
 
 /* Subsection: LDS Ordinance
 ------------------------------------------------------ */
